Fix typos - thanks to Daphne Skipper

--- a/Lesson 21 Regular Expressions.ipynb
+++ b/Lesson 21 Regular Expressions.ipynb
@@ -29,7 +29,7 @@
    "id": "3e8e3a74-4e34-4ac8-9aa7-5bc1c1e01892",
    "metadata": {},
    "source": [
-    "- A **regular expression** (**regex** for short) are patterns used to match character combinations in strings\n",
+    "- A **regular expression** (**regex** for short) is a pattern used to match character combinations in strings\n",
     "\n",
     "\n",
     "- They are extremely useful, but they can be a bit difficult to use\n",
@@ -103,6 +103,9 @@
     "        r'This is a raw string'\n",
     "        ```\n",
     "        <br>\n",
+    "        \n",
+    "        - Regular expressions often require a lot of special characters, like backslashes (`\\`)\n",
+    "        - Using raw strings prevents the special characters from taking on their usual behaviors<br><br>\n",
     "\n",
     "    - `re.search()` returns a **match object** if it finds a match, or `None` if no position in the string matches the pattern "
    ]
@@ -528,7 +531,7 @@
     "\n",
     "- We can use:\n",
     "    - `^` to match the start of the string\n",
-    "    - `$`$ to match the end of the string"
+    "    - `$` to match the end of the string"
    ]
   },
   {
@@ -1109,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a02083dd-d8fc-4b62-a193-a6b55ea62330",
    "metadata": {
     "tags": [
@@ -1261,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "d4316205-afca-43f0-b1d1-69f82996d02c",
    "metadata": {
     "tags": [
@@ -1413,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "5a2f0a97-06e7-4614-afbd-e333cf250aa7",
    "metadata": {
     "tags": [
@@ -1587,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "f328ff91-590f-4d0f-a19f-0f1462bdf824",
    "metadata": {
     "tags": [
@@ -1631,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "56dca112-5f96-423b-bf51-2ebe225be25e",
    "metadata": {
     "tags": [
@@ -1675,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "89c620a4-6fb3-4256-857e-273214081ca8",
    "metadata": {
     "tags": [
@@ -1731,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "f32cb0ea-24e4-4e62-8e66-b437787523ef",
    "metadata": {
     "tags": [
@@ -1775,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "e5e76e74-446d-4460-be4f-62e81fe0da27",
    "metadata": {
     "tags": [
@@ -1830,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "7d00ec5d-93d7-432a-9b38-e07f2bf9cd10",
    "metadata": {
     "tags": [
@@ -1874,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "c6a284a4-f63f-4ef2-af31-ed7617cd2b7b",
    "metadata": {
     "tags": [
@@ -1929,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "13ff1f37-2f79-45d9-be86-45685d6d466a",
    "metadata": {
     "tags": [
@@ -2081,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "4ff87c5c-71c2-4508-9070-8070410ea118",
    "metadata": {
     "tags": [
@@ -2253,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "338f7d33-3a79-452f-9136-8039bdae87f8",
    "metadata": {
     "tags": [
@@ -2360,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "3ce27fb2-c3bb-4b86-8e22-973ffde1187c",
    "metadata": {
     "tags": [
@@ -2411,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "3a2f5fe4-db5f-4044-97fa-85e6da52b2aa",
    "metadata": {
     "tags": [
@@ -2494,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "0ed65068-092c-47e7-a71b-d16127000964",
    "metadata": {},
    "outputs": [],
@@ -2515,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "27607f2d-bcc2-4514-94e8-09b15a80258b",
    "metadata": {},
    "outputs": [
@@ -2597,7 +2600,7 @@
        "5                                                                                                                                    White, blush shading.  Mild, wild rose fragrance.  20 to 25 petals.  Average diameter 1.25\".  Small, very double, cluster-flowered bloom form.  Blooms in flushes throughout the season.  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2637,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "64ba9b06-178e-440c-b695-35972b54f9ae",
    "metadata": {
     "tags": [
@@ -2702,7 +2705,7 @@
        "5                                                                                                                                    White, blush shading.  Mild, wild rose fragrance.  20 to 25 petals.  Average diameter 1.25\".  Small, very double, cluster-flowered bloom form.  Blooms in flushes throughout the season.  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2760,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "4deb4e70-7ad9-456b-a9e6-568ef6ca389c",
    "metadata": {
     "tags": [
@@ -2875,7 +2878,7 @@
        "5  [(20, 25)]                    []    [25]  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2947,7 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "c36c42db-b1d7-4267-bab8-edb4ea582aa4",
    "metadata": {},
    "outputs": [],
@@ -2994,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "25939d22-cdd7-442d-862a-348f04de96ea",
    "metadata": {
     "tags": [
@@ -3014,7 +3017,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3042,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "dbd0bac0-d4e8-4f7d-b4c6-bcd551eab237",
    "metadata": {
     "tags": [
@@ -3120,7 +3123,7 @@
        "5          Evita 2   23.333333"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3167,7 +3170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3181,7 +3184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
