--- a/Lesson 21 Regular Expressions.ipynb
+++ b/Lesson 21 Regular Expressions.ipynb
@@ -5,7 +5,7 @@
    "id": "2642ca0a-d7ea-4bb7-af25-e58a260b3a60",
    "metadata": {},
    "source": [
-    "**SA433 &#x25aa; Data Wrangling and Visualization &#x25aa; Fall 2025**"
+    "**SA234 &#x25aa; Data Wrangling and Visualization &#x25aa; Spring 2026**"
    ]
   },
   {
@@ -4009,7 +4009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.4"
   }
  },
  "nbformat": 4,
